--- a/63CNTT5N2/63CNTT5N2/Areas/Admin/Views/Product/Details.cshtml
+++ b/63CNTT5N2/63CNTT5N2/Areas/Admin/Views/Product/Details.cshtml
@@ -5,143 +5,57 @@
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Details</h2>
+<div class="wrapper">
+    <!-- Main Sidebar Container -->
+    <!-- Content Wrapper. Contains page content -->
+    <div class="content-wrapper">
+        <!-- Main content -->
+        <section class="content">
 
-<div>
-    <h4>Products</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.CatId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CatId)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Supplier)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Supplier)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Slug)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Slug)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Detail)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Detail)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Image)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SalePrice)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SalePrice)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Qty)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Qty)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.MetaDesc)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.MetaDesc)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.MetaKey)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.MetaKey)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreatedBy)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreatedAt)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UpdateBy)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UpdateBy)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UpdateAt)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UpdateAt)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-
-    </dl>
+            <!-- Default box -->
+            <div class="card">
+                <div class="card-header">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <strong class="text-danger">DANH MỤC SẢN PHẨM</strong>
+                        </div>
+                        <div class="col-md-6 text-right">
+                            <a href="@Url.Action("Index", "Product")" class="btn-sm btn-info"><i class="fa fa-long-arrow-alt-left"></i> Quay lại</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    @*hien thi dong thong bao*@
+                    @Html.Partial("Message")
+                    <table class="table table-bordered table-striped" id="myTable">
+                        <thead>
+                            <tr>
+                                <th>@Html.DisplayNameFor(model => model.Id)</th>
+                                <th>@Html.DisplayNameFor(model => model.Name)</th>
+                                <th>@Html.DisplayNameFor(model => model.CatId)</th>
+                                <th>@Html.DisplayNameFor(model => model.SupplierId)</th>
+                                <th>@Html.DisplayNameFor(model => model.Price)</th>
+                                <th>@Html.DisplayNameFor(model => model.Qty)</th>
+                                <th>@Html.DisplayNameFor(model => model.Image)</th>
+                                <th>Chức năng</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                           
+                                <tr>
+                                    <td>@Html.DisplayFor(model => model.Id)</td>
+                                    <td>@Html.DisplayFor(model => model.Name)</td>
+                                    <td>@Html.DisplayFor(model => model.CatId)</td>
+                                    <td>@Html.DisplayFor(model => model.SupplierId)</td>
+                                    <td>@Html.DisplayFor(model => model.Price)</td>
+                                    <td>@Html.DisplayFor(model => model.Qty)</td>
+                                    <td><img src="~/Public/img/product/@Model.Image" alt="Img" class="img-fluid" /></td>
+                                    <td>@Html.DisplayFor(model => model.Status)</td>
+                                </tr>
+                        </tbody>
+                    </table>
+                </div> <!-- /.card-footer-->
+            </div><!-- /.card -->
+        </section><!-- /.content -->
+    </div> <!-- /.content-wrapper -->
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
