--- a/63CNTT5N2/63CNTT5N2/Areas/Admin/Views/Product/Index.cshtml
+++ b/63CNTT5N2/63CNTT5N2/Areas/Admin/Views/Product/Index.cshtml
@@ -6,11 +6,11 @@
 }
 
 @section header {
-    <link href="~/Public/css/cdn.datatables.net_1.13.6_css_jquery.dataTables.min.css" rel="stylesheet" />
+    <link href="~/Public/css/jquery.dataTables.css" rel="stylesheet" />
 }
 
 @section footer {
-    <script src="~/Public/js/cdn.datatables.net_1.13.6_js_jquery.dataTables.min.js"></script>
+    <script src="~/Public/js/jquery.dataTables.js"></script>
     <script>let table = new DataTable('#myTable');</script>
 }
 
